--- a/app/templates/orders_list.html
+++ b/app/templates/orders_list.html
@@ -179,7 +179,7 @@
                                         <i class="bi bi-search"></i>
                                     </span>
                                     <input type="text" class="form-control" id="search-input"
-                                        placeholder="Buscar por ID, email, nombre o teléfono...">
+                                        placeholder="Buscar por ID, email, nombre, teléfono o DNI...">
                                     <button class="btn btn-primary" onclick="searchOrders()">
                                         Buscar
                                     </button>
@@ -240,7 +240,7 @@
                                         <i class="bi bi-search"></i>
                                     </span>
                                     <input type="text" class="form-control" id="search-input-external"
-                                        placeholder="Buscar por ID, email, nombre o teléfono...">
+                                        placeholder="Buscar por ID, email, nombre, teléfono o DNI...">
                                     <button class="btn btn-primary" onclick="searchOrdersExternal()">
                                         Buscar
                                     </button>
